--- a/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
@@ -30,7 +30,7 @@ Case details
       <p class="govuk-body">
         All access requests are logged for auditing purposes.
       </p>
-      <p>The case will appear in your <a href="mycases-r" class="govuk-link">My cases</a> tab.
+      <p><a href="PA-00321-2018-a" class="govuk-link">View case</a>.
     </div>
   </div>
 {% endblock %}
