--- a/app/views/caseaccess/pages/PA-00467-2017-trrc.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trrc.html
@@ -35,17 +35,17 @@ Case details
     </h2>
     <ul class="govuk-tabs__list">
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-t">
+        <a class="govuk-tabs__tab" href="PA-00467-2017-tcr">
           Tasks
         </a>
       </li>
       <li class="govuk-tabs__list-item">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-ar">
+        <a class="govuk-tabs__tab" href="#">
           Roles / access
         </a>
       </li>
       <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-        <a class="govuk-tabs__tab" href="PA-00467-2017-a">
+        <a class="govuk-tabs__tab" href="#">
           Overview
         </a>
       </li>
@@ -97,7 +97,7 @@ Case details
                 The requester has been denied access to this case.
               </p>
               <p class="govuk-body">
-                <a href="/caseaccess/pages/PA-00467-2017-tc" class="govuk-link">Back to tasks</a>
+                <a href="/caseaccess/pages/PA-00467-2017-tcr" class="govuk-link">Back to tasks</a>.
               </p>
             </div>
           </div>
