--- a/app/views/caseaccess/pages/available-tasks.html
+++ b/app/views/caseaccess/pages/available-tasks.html
@@ -60,7 +60,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
                     <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">4 days</span> </td>
-                    <td class="govuk-table__cell">14/03/2021</td>
+                    <td class="govuk-table__cell">14 Mar 2021</td>
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
@@ -71,7 +71,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
                     <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">3 days</span>  </td>
-                    <td class="govuk-table__cell">14/03/2021</td>
+                    <td class="govuk-table__cell">14 Mar 2021</td>
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
