--- a/app/views/caseaccess/pages/mycases-r.html
+++ b/app/views/caseaccess/pages/mycases-r.html
@@ -94,7 +94,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>Challenged</Strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>14 Mar 2021</Strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><Strong>14 Apr 2021</Strong></td>
-                    <td class="govuk-table__cell"><a href="#" class="right_">Go to case</a></td>
+                    <td class="govuk-table__cell"><a href="PA-00321-2018-a" class="right_">Go to case</a></td>
                 </tr>
 
               </tbody>
