--- a/app/views/caseaccess/pages/mycases.html
+++ b/app/views/caseaccess/pages/mycases.html
@@ -42,15 +42,15 @@ My work
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none""></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 140px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none""></th> -->
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 95px;" aria-sort="none"></th>
               </tr>
             </thead>
             <tbody class="govuk-table__body">
@@ -58,20 +58,20 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                  <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Leadership Judge</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell">N/A</td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 Oct 2020 </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 May 2021 </td>
+                    <td class="govuk-table__cell">18 Apr 2021</td>
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
-                    <td class="govuk-table__cell">9 nov  </td>
+                    <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
+                    <td class="govuk-table__cell">09 Nov 2020  </td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
@@ -80,8 +80,8 @@ My work
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Mr Peter Williams Vs Mrs Janet Richards</a></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Adoption</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                    <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">N/A</td>
@@ -91,8 +91,8 @@ My work
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Mrs Mary Hunter-bridge Vs Mrs Caroline Manning</a></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Family</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Care and supervision</td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                      <!-- <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
+                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021 </td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">N/A</td>
