--- a/app/views/caseaccess/pages/mywork.html
+++ b/app/views/caseaccess/pages/mywork.html
@@ -59,7 +59,7 @@ My work
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
                                 <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">5 days</span> </td>
-                                <td class="govuk-table__cell">14/03/2021</td>
+                                <td class="govuk-table__cell">14 Mar 2021</td>
                                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
                             <tr class="govuk-table__row">
