--- a/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
@@ -23,14 +23,14 @@ Case details
 -->
       <h2 class="govuk-heading-m">What happens next</h2>
       <p class="govuk-body">
-      The file will be accessible until [duration].</p>
+      The case file will be accessible until [duration].</p>
       <p class="govuk-body">
         After [duration] expires you will need to request access again.
       </p>
       <p class="govuk-body">
         All access requests are logged for auditing purposes.
       </p>
-      <p><a href="PA-00321-2018-a" class="govuk-link">View case</a>.
+      <p><a href="PA-00321-2018-a" class="govuk-link">View case file</a>.
     </div>
   </div>
 {% endblock %}
