--- a/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
@@ -30,7 +30,7 @@ Case details
       <p class="govuk-body">
         All access requests are logged for auiting purposes.
       </p>
-      <p>The case will appear in your <a href="mycases-p" class="govuk-link">My cases</a> tab.
+      <p>The case file will appear in your <a href="mycases-p" class="govuk-link">My cases</a> tab.
     </div>
   </div>
 {% endblock %}
