--- a/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-confirmation.html
@@ -23,7 +23,7 @@ Case details
 -->
       <h2 class="govuk-heading-m">What happens next</h2>
       <p class="govuk-body">
-      Your request to access the case file has been sent to [Name of approver].</p>
+      Your request to access the case file has been sent.</p>
     <!--  <p class="govuk-body">
         You will be notified by email when this has been granted.
       </p> -->
