updates and amends from feedback

--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -25,7 +25,7 @@
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=judiciary&">Confirmation</a><br>Restricted access - Flow request - Subject to change</br></p>
                 <p><a target="_blank" href="/caseaccess/pages/mycases-p?usertype=judiciary&">My cases</a><br>Restricted access - Flow request - Subject to change</p>
                 <h3 class="govuk-heading-s">Scenario C - Part 1 - Grant request Specific Access to case (approve)</h3>
-                <p><a target="_blank" href="/caseaccess/pages/mywork-s2?usertype=judiciary&">My tasks</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=judiciary&">Available tasks</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=judiciary&">Case view - Overview</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=judiciary&">Case view - Role / access</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>Restricted access - Flow approve - Subject to change</p>
@@ -61,7 +61,7 @@
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=staff&">Confirmation</a><br>Restricted access - Flow request - Subject to change</br></p>
                 <p><a target="_blank" href="/caseaccess/pages/mycases-p?usertype=staff&">My cases</a><br>Restricted access - Flow request - Subject to change</p>
                 <h3 class="govuk-heading-s">Scenario C - Part 1 - Grant request Specific Access to case (approve)</h3>
-                <p><a target="_blank" href="/caseaccess/pages/mywork-s2?usertype=staff&">My tasks</a><br>Restricted access - Flow approve - Subject to change</p>
+                <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-a?usertype=staff&">Case view - Overview</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=staff&">Case view - Role / access</a><br>Restricted access - Flow approve - Subject to change</p>
                 <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>Restricted access - Flow approve - Subject to change</p>
