--- a/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-confirmation.html
@@ -23,9 +23,9 @@ Case details
 -->
       <h2 class="govuk-heading-m">What happens next</h2>
       <p class="govuk-body">
-      The case file will be accessible until [duration].</p>
+      The case file will be accessible until midnight tonight.</p>
       <p class="govuk-body">
-        After [duration] expires you will need to request access again.
+        After access expires you will need to request access again.
       </p>
       <p class="govuk-body">
         All access requests are logged for auditing purposes.
