--- a/app/views/caseaccess/pages/PA-00467-2017-tra.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tra.html
@@ -146,7 +146,7 @@ Case details
           value: "phone",
           text: "Current day only",
           hint: {
-        text: "Starts from today."
+        text: "Starts from today and access ends at midnight."
       }
       },
         {
