--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -29,7 +29,7 @@ Case details
             isPageHeading: true
           },
           hint: {
-            text: "Access will be granted for [duration]. You must provide a reason."
+            text: "Access will be granted until midnight tonight. You must provide a reason."
           }
         }) }}
     {{ govukButton({
