judge header update

--- a/app/views/searchcases/layoutjudicial.html
+++ b/app/views/searchcases/layoutjudicial.html
@@ -51,14 +51,14 @@
 
         <div style="width:1220px; display: flex; margin: 0 auto;">
 
-            <div style="width: 406px; ">
+            <div style="width: 100px; ">
                 <img src="/public/images/govlogowhite.png" width="73" height="60" style="margin-top:10px;">
             </div>
 
 
             <div>
 
-                <div class="hmcts-header__container" style="width: 810px;">
+                <div class="hmcts-header__container" style="width: 1116px;">
 
                     <div class="hmcts-header__logo">
                         <a class="hmcts-header__link" href="/noticeofchange/solicitor/caselist" aria-current="page">Judicial case manager</a>
@@ -84,20 +84,20 @@
                     <div style=" display: flex; margin: 0 auto; background-color: #8d100e; ">
 
                         <div>
-                            <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style="background-color: #8d100e; width: 391px;">
+                            <nav class="hmcts-primary-navigation" aria-label="Primary navigation" style="background-color: #8d100e; width: 697px;">
                                 <ul class="hmcts-primary-navigation__list">
                                     <li class="hmcts-primary-navigation__item">
                                         <a class="hmcts-primary-navigation__link" href="/searchcases/pages/caselist">
                                             Your cases
                                         </a>
                                     </li>
-                                    <!-- Not in live
+
                                     <li class="hmcts-primary-navigation__item">
-                                        <a class="hmcts-primary-navigation__link" href="/searchcases/solicitor/caselist">
-                                            Your hearings
+                                        <a class="hmcts-primary-navigation__link" href="#">
+                                            Manage tasks and cases
                                         </a>
                                     </li>
-                                    -->
+
                                     <li class="hmcts-primary-navigation__item">
                                         <a class="hmcts-primary-navigation__link" href="/searchcases/pages/startsearch">
                                             Search cases
