updates from WA

--- a/app/views/caseaccess/pages/available-tasks-s2o.html
+++ b/app/views/caseaccess/pages/available-tasks-s2o.html
@@ -38,18 +38,19 @@ My work
             </li>
           </ul>
         </nav>
+        <p class="govuk-body">Displaying <strong>3</strong> of <strong>3</strong> tasks</p>
         <table class="govuk-table ">
           <thead class="govuk-table__head">
-          <tr class="govuk-table__row">
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 220px;" aria-sort="none"><button type="button" data-index="1">Case name</button></th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
-            <th scope="col" class="govuk-table__header"></th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 180px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
-<th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
-            <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"></th>
-        </tr>
+            <tr class="govuk-table__row">
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 290px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 400px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
+              <th scope="col" class="govuk-table__header"></th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
+      <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
+              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 130px;" aria-sort="none"><a href="#">(Reset sorting)</a></th>
+              </tr>
         </thead>
             <tbody class="govuk-table__body">
                 <tr class="govuk-table__row">
@@ -60,11 +61,11 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review specific access request</td>
                     <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">2 days</span> </td>
-                    <td class="govuk-table__cell">N/A</td>
+                  <!--  <td class="govuk-table__cell">N/A</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="available-tasks-s2" class="right_m">Manage</a><span class="govuk-accordion-wa__iconc"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
-                    <td colspan="8" class="govuk-table__cell right"><a href="PA-00467-2017-tr" class="right_l">Review request</a></td>
+                    <td colspan="7" class="govuk-table__cell right"><a href="PA-00467-2017-tr" class="right_l">Review request</a></td>
                 </tr>
                 <tr class="govuk-table__row">
 
@@ -74,7 +75,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Review respondent evidence</td>
                     <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">1 day</span>  </td>
-                    <td class="govuk-table__cell">14 Mar 2021</td>
+                <!--    <td class="govuk-table__cell">14 Mar 2021</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
@@ -87,7 +88,7 @@ My work
                     C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Create case summary</td>
                     <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">1 day</span>  </td>
-                    <td class="govuk-table__cell">N/A</td>
+                  <!--  <td class="govuk-table__cell">N/A</td> -->
                     <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
 
