--- a/app/views/caseaccess/pages/mycases-tc.html
+++ b/app/views/caseaccess/pages/mycases-tc.html
@@ -35,20 +35,20 @@ My work
                 My cases <span class="xui-alert-link__number">1 </span>
               </a>
             </li>
-
           </ul>
         </nav>
-        <h2 class="govuk-heading-m">My roles</h2>
         <table class="govuk-table ">
             <thead class="govuk-table__head">
               <tr class="govuk-table__row">
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 405px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                  <th scope="col" class="govuk-table__header"></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;" aria-sort="none"></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 140px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                <!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none""></th> -->
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
+                <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 110px;" aria-sort="none"><a href="#">(Reset sorting)</a></th>
               </tr>
             </thead>
             <tbody class="govuk-table__body">
@@ -56,37 +56,25 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Patti Jo</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                  <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Leadership Judge</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--orange">Today</span> </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 Oct 2020 </td>
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 May 2021 </td>
+                  <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Hudson Remi</a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">HR</td>
+                    <!--  <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
+                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
+                    <td class="govuk-table__cell">09 Nov 2020  </td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
-                    <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--green">9 nov</span>  </td>
+                  <!--   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
-            </tbody>
-        </table>
-          <h2 class="govuk-heading-m">My access</h2>
-          <table class="govuk-table ">
-              <thead class="govuk-table__head">
-                <tr class="govuk-table__row">
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 505px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 400px;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 320px;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
-                    <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"></th>
-                </tr>
-              </thead>
-              <tbody class="govuk-table__body">
-                <tr class="govuk-table__row">
+                  <tr class="govuk-table__row">
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="/caseaccess/pages/PA-00467-2017-atc"><strong>Amelia Chu</strong></a></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Immigration and Asylum</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>Protection</strong></td>
@@ -94,8 +82,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Mar 2021</strong></td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><strong>14 Apr 2021</strong></td>
                     <td class="govuk-table__cell"><a href="/caseaccess/pages/PA-00467-2017-atc">Goto case</a></td>
-                </tr>
-
+                  </tr>
               </tbody>
           </table>
 {% endblock %}
