--- a/app/views/caseaccess/pages/mycases.html
+++ b/app/views/caseaccess/pages/mycases.html
@@ -49,8 +49,8 @@ My work
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case role</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
                   <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 120px;" aria-sort="none"><button type="button" data-index="1">End</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
-                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 95px;" aria-sort="none"></th>
+                <!--     <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 130px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
+                  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 110px;" aria-sort="none"><a href="#">(Reset sorting)</a></th>
               </tr>
             </thead>
             <tbody class="govuk-table__body">
@@ -62,7 +62,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Leadership Judge</td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 Oct 2020 </td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">03 May 2021 </td>
-                    <td class="govuk-table__cell">18 Apr 2021</td>
+                  <!--  <td class="govuk-table__cell">18 Apr 2021</td> -->
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                 <tr class="govuk-table__row">
@@ -73,7 +73,7 @@ My work
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Hearing Judge</td>
                     <td class="govuk-table__cell">09 Nov 2020  </td>
                     <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
-                    <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
+                  <!--   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td> -->
                     <td class="govuk-table__cell"><a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                 </tr>
                   <tr class="govuk-table__row">
@@ -84,7 +84,7 @@ My work
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Challenged</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Mar 2021</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">14 Apr 2021 </td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">N/A</td>
+                  <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">N/A</td> -->
                       <td class="govuk-table__cell"><a href="#" class="right_">Go to case</a></td>
                   </tr>
                   <tr class="govuk-table__row">
@@ -95,7 +95,7 @@ My work
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Specific</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021</td>
                       <td class="govuk-table__cell govuk-body govuk-!-font-size-19">22 Mar 2021 </td>
-                      <td class="govuk-table__cell govuk-body govuk-!-font-size-19">N/A</td>
+                  <!--    <td class="govuk-table__cell govuk-body govuk-!-font-size-19">N/A</td> -->
                       <td class="govuk-table__cell"><a href="#" class="right_m">Go to case</a></td>
                   </tr>
               </tbody>
