--- a/app/views/caseaccess/layoutjudicial.html
+++ b/app/views/caseaccess/layoutjudicial.html
@@ -67,7 +67,7 @@
               </li>
               <li class="hmcts-primary-navigation__item">
                 <a class="hmcts-primary-navigation__link" href="#">
-                  Manage tasks and cases
+                  All work
                 </a>
               </li>
               <li class="hmcts-primary-navigation__item">
