--- a/app/views/caseaccess/pages/mywork.html
+++ b/app/views/caseaccess/pages/mywork.html
@@ -38,17 +38,18 @@ My work
             </li>
           </ul>
         </nav>
+        <p class="govuk-body">Displaying <strong>2</strong> of <strong>2</strong> tasks</p>
                     <table class="govuk-table ">
                         <thead class="govuk-table__head">
                           <tr class="govuk-table__row">
                               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 405px;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
-                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
+                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 400px;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
                               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Location</button></th>
                               <th scope="col" class="govuk-table__header"></th>
                               <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 420px;" aria-sort="none"><button type="button" data-index="1">Task</button></th>
-                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 300px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
-  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th>
-                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 150px;" aria-sort="none"></th>
+                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Age of task</button></th>
+<!--  <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: 200px;" aria-sort="none"><button type="button" data-index="1">Hearing date</button></th> -->
+                              <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-14" style="width: 130px;" aria-sort="none"><a href="#">(Reset sorting)</a></th>
                           </tr>
                         </thead>
                         <tbody class="govuk-table__body">
@@ -59,7 +60,7 @@ My work
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
                                 <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review respondent evidence</a></td>
                                 <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">5 days</span> </td>
-                                <td class="govuk-table__cell">14 Mar 2021</td>
+                              <!--  <td class="govuk-table__cell">14 Mar 2021</td> -->
                                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
                             <tr class="govuk-table__row">
@@ -71,7 +72,7 @@ My work
                                 C13.7,13.2,13.2,13.7,12.5,13.7z M12.5,0.5c-6.6,0-12,5.4-12,12s5.4,12,12,12s12-5.4,12-12S19.1,0.5,12.5,0.5z" /></svg></td>
                                   <td class="govuk-table__cell govuk-body govuk-!-font-size-19"><a href="#">Review appellant case</a></td>
                                 <td class="govuk-table__cell"><span class="hmcts-badge hmcts-badge--black">3 days</span>  </td>
-                                <td class="govuk-table__cell">N/A<a href="#"></a></td>
+                            <!--    <td class="govuk-table__cell">N/A<a href="#"></a></td> -->
                                 <td class="govuk-table__cell">&nbsp;&nbsp;&nbsp;<a href="#" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
                             </tr>
                         </tbody>
