--- a/app/views/caseaccess/pages/PA-00321-2018-request-error.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request-error.html
@@ -17,6 +17,18 @@ Case details
     Challenged access. <br>This case is located outside your working region. Access to this case is logged for auditing purposes.
   </div>
 </div>
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+    <ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#passport-issued-error">Enter more detail</a>
+      </li>
+    </ul>
+  </div>
+</div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
         {{ govukTextarea({
@@ -30,7 +42,10 @@ Case details
           },
           hint: {
             text: "Access will be granted until midnight tonight. You must provide a reason."
-          }
+          },
+  errorMessage: {
+    text: "Enter more detail"
+  }
         }) }}
     {{ govukButton({
   text: "Submit",
