rest of divorce journey

--- a/app/views/divorceserviceonly/citizen/sendwhere.html
+++ b/app/views/divorceserviceonly/citizen/sendwhere.html
@@ -81,7 +81,7 @@ Case details
                                 </div>
                                 <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-2">
                                     <div class="govuk-form-group">
-                                        <p><br>You'll need to know the solicitors name, address and email.<br><br></p>
+                                        <p><br>You'll need to know the solicitor's name, firm, address and email.<br><br></p>
                                     </div>
                                 </div>
 
@@ -115,7 +115,7 @@ Case details
                         </a>
 
                     <!--  Selected solicitor -->
-                        <a href="/divorceserviceonly/citizen/#" style="display: none" id="link2">
+                        <a href="/divorceserviceonly/citizen/solicitordetails" style="display: none" id="link2">
                             <button class="govuk-button" data-module="govuk-button">
                                 Continue
                             </button>
