fixed and more validation on divorce

--- a/app/views/divorceserviceonly/citizen/sendwhere.html
+++ b/app/views/divorceserviceonly/citizen/sendwhere.html
@@ -115,7 +115,7 @@ Case details
                         </a>
 
                     <!--  Selected solicitor -->
-                        <a href="/divorceserviceonly/citizen/solicitordetails" style="display: none" id="link2">
+                        <a href="/divorceserviceonly/citizen/solicitordetails?noresults=false&validaton=false&" style="display: none" id="link2">
                             <button class="govuk-button" data-module="govuk-button">
                                 Continue
                             </button>
