more link fixing

--- a/app/views/divorceserviceonly/index.html
+++ b/app/views/divorceserviceonly/index.html
@@ -17,7 +17,9 @@
 
         <p>These pages are to follow the exisiting pages which collect both parties address.</p>
 
-        <p><a target="_blank" href="/divorceserviceonly/citizen/sendwhere">Service address</a></p>
+        <p><a target="_blank" href="/divorceserviceonly/citizen/sendwhere?errornotselected=false&">Service address selection</a></p>
+
+        <p><a target="_blank" href="/divorceserviceonly/citizen/solicitordetails?noresults=false&validaton=false&">Solicitor's details entry</a></p>
 
 
     </div>
